objects/PA_BU_Admin_Master__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Rebate_Routing__c</fullName>
        <description>Above Threshold   -&gt; 
a. Above Floor price AND
b. Above Reference prcie AND
c. Total Sales Reduction value &lt;= 250K $

Below Threshold -&gt; 
a. Below Floor price OR
b. Below Reference price OR
c. Total Sales Reduction value &gt; 250K $</description>
        <label>Rebate Routing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Threshold</fullName>
                </value>
                <value>
                    <fullName>Below Threshold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_End_User_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the approval process header is for an End User Rebate</description>
        <label>Is End User Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_Category__c</fullName>
        <label>Price Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Project Pricing</fullName>
                </value>
                <value>
                    <fullName>Pricing Task</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Task_Type__c</fullName>
        <label>Pricing Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Price_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Spot Price</fullName>
                </value>
                <value>
                    <fullName>Rebate Agreement</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Other Pricing Task</fullName>
                </value>
                <value>
                    <fullName>Rebate adjustment</fullName>
                </value>
                <value>
                    <fullName>Rebate payout</fullName>
                </value>
                <value>
                    <fullName>Rebate Payout Product Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Class__c</fullName>
        <label>Request Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Specific</fullName>
                </value>
                <value>
                    <fullName>Non Customer Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Approval Process Header</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Admin Master Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>